# join-waitlist

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Cargo.toml  package.json
apps/api/prisma/: Cargo.toml
apps/api/prisma/prisma/: schema.prisma
apps/api/src/: main.rs
apps/www/: .eslintrc.cjs  package.json
apps/www/src/: root.tsx
apps/www/src/routes/: index.tsx
apps/www/src/utils/rspc/: index.ts
