[package]
name = "core"
version = "0.0.0"
edition = "2021"
publish = false
resolver = "2"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5", default-features = false, features = ["postgresql", "migrations", "rspc"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.5", default-features = false, features = ["postgresql", "migrations", "rspc"]  }
rspc = { features = ["axum"] }
serde = "1.0.152"
tokio = { version = "1.26.0", features = ["full"] }
async-stream = "=0.3.3"
axum = "0.5.6"
tower-cookies = "0.9.0"

[alias]
prisma = "run -p prisma-client-rust-cli"
